@@ -1,3 +1,9 @@
+2001-07-19  Richard Hestilow  <hestilow@ximian.com>
+
+	* capplet-util.c (quit_cb): Add an idle handler to call the real
+	quit cb.
+	(real_quit_cb): Added, it is what quit_cb used to be.
+
 2001-07-19  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplet-util.c (create_control_cb): Use a static variable for
